--- a/deno.json
+++ b/deno.json
@@ -4,5 +4,8 @@
   "exports": {
     ".": "./src/mod.ts",
     "./worker": "./src/worker.ts"
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.13"
   }
 }
