--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,21 @@
 {
   "name": "@doctor/thread",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "exports": {
     ".": "./src/mod.ts",
     "./worker": "./src/worker.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13"
+  },
+  "tasks": {
+    "test": "deno test -R='./' --parallel --trace-leaks",
+    "cov": "deno task test --coverage --clean --reporter=dot",
+    "cov:mac": "deno task cov && open coverage/html/index.html",
+    "cov:lin": "deno task cov && xdg-open coverage/html/index.html",
+    "cov:win": "deno task cov && start coverage/html/index.html",
+    "lint": "deno lint",
+    "fmt": "deno fmt",
+    "ok": { "command": "deno task test --doc", "dependencies": ["fmt", "lint"] }
   }
 }
