--- a/deno.json
+++ b/deno.json
@@ -1,21 +1,47 @@
 {
   "name": "@doctor/thread",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "exports": {
     ".": "./src/mod.ts",
+    "./types": "./src/types.ts",
     "./worker": "./src/worker.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13"
   },
+  "exclude": ["**/.*"],
   "tasks": {
+    "cov": "deno task test --reporter=dot --coverage='.coverage/' --clean",
+    "cov:mac": "deno task cov && open .coverage/html/index.html",
+    "cov:lin": "deno task cov && xdg-open .coverage/html/index.html",
+    "cov:win": "deno task cov && start .coverage/html/index.html",
+    "doc": "deno doc --html --output='.docs/' src/mod.ts src/types.ts src/worker.ts",
+    "doc:mac": "deno task doc && open .docs/all_symbols.html",
+    "doc:lin": "deno task doc && xdg-open .docs/all_symbols.html",
+    "doc:win": "deno task doc && start .docs/all_symbols.html",
     "test": "deno test -R='./' --parallel --trace-leaks",
-    "cov": "deno task test --coverage --clean --reporter=dot",
-    "cov:mac": "deno task cov && open coverage/html/index.html",
-    "cov:lin": "deno task cov && xdg-open coverage/html/index.html",
-    "cov:win": "deno task cov && start coverage/html/index.html",
     "lint": "deno lint",
     "fmt": "deno fmt",
     "ok": { "command": "deno task test --doc", "dependencies": ["fmt", "lint"] }
+  },
+  "lint": {
+    "rules": {
+      "tags": ["recommended"],
+      "include": [
+        "camelcase",
+        "explicit-function-return-type",
+        "explicit-module-boundary-types",
+        "no-console",
+        "no-eval",
+        "no-inferrable-types",
+        "no-sparse-arrays",
+        "no-sync-fn-in-async-fn",
+        "no-throw-literal",
+        "no-undef",
+        "prefer-ascii",
+        "single-var-declarator",
+        "verbatim-module-syntax"
+      ]
+    }
   }
 }
